fixed spacing on contact form

--- a/public_html/static/css/responsive.css
+++ b/public_html/static/css/responsive.css
@@ -3,6 +3,9 @@
     #tf-menu.navbar-default {
         background-color: rgba(0, 0, 0, 0.65);
     }
+    #tf-contact {
+        padding: 12% 2%;
+    }
 }
 @media (max-width: 625px) {
     #tf-contact .container {
