--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -416,7 +416,7 @@ ol.type li a.active { font-weight: 700; }
 
 /* Contact Section */
 #tf-contact{
-	padding: 55px 2%;
+	padding: 8.5% 2%;
 	background-color: #ffffff;
 	position:relative;
 	z-index: 100;
